# dotfiles

./: .gitignore  .gitmodules  .travis.yml  README.md  README.org  cachix.nix  flake.nix  flake.nix.tmp  install  install.sh  install_mint.sh  save.sh
.github/workflows/: main.yml  shellcheck.yml
.xmonad/: xmonad.hs  xmonad.hs.minimal
cachix/: anyrun.nix  nixpkgs.nix  uci.nix
home/: .Xresources  .bash_profile  .bashrc  .spacemacs  .stalonetrayrc  .vimrc  .xbindkeysrc  .xprofile  .xsession  .zshrc  fish_conf.sh  nvim
home/.config/: compton.conf  i3-scrot.conf  mimeapps.list  picom.conf
home/.devilspie/: opacity.ds
home/.doom.d/: config.el  init.el  packages.el
home/.emacs.d/: .gitignore  config.el  config.org  init.el  initial.org  keybindings.el  package.el  preamble.sty  print-agenda.el
host/: configuration.nix  hardware-configuration.nix
hosts/: laptop.nix
modules/: default.nix  lib.nix  other.nix  settings.nix
modules/desktop-environment/xmobar/: .gitignore  default.nix  my-xmobar.cabal  my-xmobar.nix  xmobar.hs  xmobar_mon2.hs  xmobar_top.hs
modules/desktop-environment/xmobar/lib/: Helpers.hs
modules/desktop-environment/xmobar/rust-blocks/: default.nix  load-org.el
nixpkgs/: config.nix  desktop-environment.nix  editors.nix  home.nix  misc.nix  shell.nix
other/: crontab  fonts.conf  kernel.config  sddm.conf  test.sh  xorg.conf
profiles/: dellLaptop.nix  heavy.nix  home-server-ci.nix  home-server.nix  macbook.nix  pc.nix  ubuntu-virt.nix  work-linux.nix  work.nix
to-be-moved/: .Xresources  .mbsyncrc  .xbindkeysrc  fish_conf.sh
(+353 files in other folders)
