name: my-xmobar
version: 1.0.0
cabal-version: >= 1.18
build-type: Simple

executable xmobar
    build-depends: base
                 , xmobar
    main-is: xmobar.hs
    other-modules: Helpers
                 , Theme
    hs-source-dirs: lib, ./
    ghc-options: -threaded
    default-language: Haskell2010

executable xmobar_top
    build-depends: base
                 , xmobar
    other-modules: Helpers
                 , Theme
    hs-source-dirs: lib, ./
    main-is: xmobar_top.hs
    ghc-options: -threaded
    default-language: Haskell2010
